[package]
name = "tcp_shim"
version = "0.1.0"
authors = ["lcdr", "zaop"]
edition = "2021"
description = "Proxy server for converting lcdr's TCP/UDP based protocol to RakNet's protocol."
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/enteryournamehere/tcp_shim/"

[dependencies]
endio = { git = "https://github.com/lcdr/endio" }
endio_bit = { git = "https://github.com/lcdr/endio_bit" }
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }